fixing a few things

--- a/src/blogs/best-nepali-board-games/index.mdx
+++ b/src/blogs/best-nepali-board-games/index.mdx
@@ -2,9 +2,9 @@
 title: "Best Nepali Board Games I've Actually Played"
 slug: best-nepali-board-games
 excerpt: "I've been exploring Nepal's board game scene for a while now. These four games stood out after countless sessions with friends and family."
-publishedAt: "2024-01-15"
-author: Tumlet Team
-readTime: 8 min read
+publishedAt: "2025-06-22"
+author: Yashant
+readTime: 5 min read
 category: Board Games
 images:
   - /blogs/best-nepali-board-games/bluff-momo.png
@@ -103,23 +103,24 @@ _A fast-paced rummy-style game with deep roots in Nepali culture._
 
 ![Marriage card game](/blogs/best-nepali-board-games/marriage.png)
 
-Marriage (aka Nepali Taas) uses three decks, and each player gets 21 cards. The goal: build valid sets — like pure sequences, dublee (pairs), and special combos like Marriage (Tiplu, Jhiplu, Poplu). There’s a joker for every round, but you only find out what it is after meeting a few conditions.
+Marriage (aka Nepali Taas) uses three decks, and each player gets 21 cards. The goal: build valid sets — like pure sequences, dublee (pairs), and special combos like Marriage (Tiplu, Jhiplu, Poplu). There's a joker for every round, but you only find out what it is after meeting a few conditions.
 
-It’s part strategy, part memory, and part luck — with moments of pure chaos when someone finishes out of nowhere.
+It's part strategy, part memory, and part luck — with moments of pure chaos when someone finishes out of nowhere.
 
 #### Why I like it:
 - Fast-paced but still strategic
-- Easy to jump into once you’ve seen it played once
+- Easy to jump into once you've seen it played once
 - Really fun with experienced players
 
 #### What I dislike:
-- The rules & the scoring system aren’t beginner-friendly
+- The rules & the scoring system aren't beginner-friendly
 - You need 3 decks of card to play
 - The game are usually long 
 
 #### Where to play:
 👉 [Play it online](https://bhoos.com/marriage/)
 
+---
 
 ## Final picks
 
@@ -131,3 +132,9 @@ Here's when I reach for each one:
 - Marriage → During Dashain
 
 Support local. The prices are fair, and the experience is one-of-a-kind. Plus, playing something that reflects your own culture hits different. 
+
+---
+
+import FooterBlogCTA from '../../components/FooterBlogCTA';
+
+<FooterBlogCTA /> 
