--- a/src/blogs/best-nepali-board-games/index.mdx
+++ b/src/blogs/best-nepali-board-games/index.mdx
@@ -1,3 +1,18 @@
+import { Helmet } from 'react-helmet';
+
+<Helmet>
+  <title>Best Nepali Board Games I've Actually Played</title>
+  <meta property="og:title" content="Best Nepali Board Games I've Actually Played" />
+  <meta property="og:description" content="I've been exploring Nepal's board game scene for a while now. These four games stood out after countless sessions with friends and family." />
+  <meta property="og:image" content="https://tumlet.com/blogs/best-nepali-board-games/unfurl.png" />
+  <meta property="og:url" content="https://tumlet.com/blog/best-nepali-board-games" />
+  <meta property="og:type" content="article" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Best Nepali Board Games I've Actually Played" />
+  <meta name="twitter:description" content="I've been exploring Nepal's board game scene for a while now. These four games stood out after countless sessions with friends and family." />
+  <meta name="twitter:image" content="https://tumlet.com/blogs/best-nepali-board-games/unfurl.png" />
+</Helmet>
+
 ---
 title: "Best Nepali Board Games I've Actually Played"
 slug: best-nepali-board-games
