adding an internal linking to the new blog

--- a/src/blogs/best-nepali-board-games/index.mdx
+++ b/src/blogs/best-nepali-board-games/index.mdx
@@ -148,6 +148,7 @@ Here's when I reach for each one:
 
 Support local. The prices are fair, and the experience is one-of-a-kind. Plus, playing something that reflects your own culture hits different. 
 
+Read more: Guide about [board games in Nepal](https://tumlet.com/blogs/board-game-nepal).
 
 import FooterBlogCTA from '../../components/FooterBlogCTA';
 
