internal linking in blog

--- a/src/blogs/best-nepali-board-games/index.mdx
+++ b/src/blogs/best-nepali-board-games/index.mdx
@@ -28,6 +28,8 @@ import { Helmet } from 'react-helmet';
   <meta name="twitter:image" content="https://tumlet.com/blogs/best-nepali-board-games/unfurl.png" />
 </Helmet>
 
+I've been exploring Nepal's board game scene for a while now, and these four games stood out after countless sessions with friends and family. If you're looking for where to play board games in Nepal or discover game nights and cafés, check out our [complete guide to board games in Nepal](/blog/board-game-nepal).
+
 ## 1. Bluff Momo
 
 _A lying game that gets better the more you lie._
@@ -148,7 +150,7 @@ Here's when I reach for each one:
 
 Support local. The prices are fair, and the experience is one-of-a-kind. Plus, playing something that reflects your own culture hits different. 
 
-Read more: Guide about [board games in Nepal](https://tumlet.com/blogs/board-game-nepal).
+Read more: Guide about [board games in Nepal](/blog/board-game-nepal).
 
 import FooterBlogCTA from '../../components/FooterBlogCTA';
 
