--- a/src/blogs/board-game-nepal/index.mdx
+++ b/src/blogs/board-game-nepal/index.mdx
@@ -87,7 +87,7 @@ Board game Nepal is not just about imported games — local creators are making 
 
 ### Bluff Momo – By Tumlet
 
-Our first game, Bluff Momo, is all about deception and Nepali humor. You'll meet characters like Hante, Aama, and Bhatti ko Dai. Bluff momo has a bit of a learning curve to it. You need to memorize different powers. But once you do that, you can end of playing for hours.
+Our first game, Bluff Momo, is all about deception and Nepali humor. You'll meet characters like Hante, Aama, and Bhatti ko Dai. Bluff momo has a bit of a learning curve to it. You need to memorize different powers. But once you do that, you can end of playing for hours. I've written a detailed review of [Bluff Momo and other Nepali board games I've actually played](/blog/best-nepali-board-games) if you want to know more.
 
 💰 **Price:** Rs. 1490  
 📩 [Order via DM on Instagram](https://www.instagram.com/tumlet.boardgames/)
